--- a/GeometryTunes/PathListController.xib
+++ b/GeometryTunes/PathListController.xib
@@ -15,6 +15,7 @@
 			<string>IBUITableView</string>
 			<string>IBUIToolbar</string>
 			<string>IBUIView</string>
+			<string>IBUISegmentedControl</string>
 			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -43,6 +44,7 @@
 						<string key="NSFrame">{{0, 44}, {768, 960}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -60,25 +62,66 @@
 					<object class="IBUIToolbar" id="3490839">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">290</int>
+						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUISegmentedControl" id="1021949086">
+								<reference key="NSNextResponder" ref="3490839"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{111, 7}, {85, 30}}</string>
+								<reference key="NSSuperview" ref="3490839"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="741664516"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<int key="IBSegmentControlStyle">2</int>
+								<int key="IBNumberOfSegments">2</int>
+								<int key="IBSelectedSegmentIndex">0</int>
+								<array key="IBSegmentTitles">
+									<string>Add</string>
+									<string>Remove</string>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentWidths">
+									<real value="0.0"/>
+									<real value="0.0"/>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentEnabledStates">
+									<boolean value="YES"/>
+									<boolean value="YES"/>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentContentOffsets">
+									<string>{0, 0}</string>
+									<string>{0, 0}</string>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentImages">
+									<object class="NSNull" id="4"/>
+									<reference ref="4"/>
+								</array>
+							</object>
+						</array>
 						<string key="NSFrameSize">{768, 44}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="741664516"/>
+						<reference key="NSNextKeyView" ref="1021949086"/>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<array class="NSMutableArray" key="IBUIItems">
 							<object class="IBUIBarButtonItem" id="188240599">
 								<string key="IBUITitle">New</string>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<float key="IBUIWidth">85</float>
+								<float key="IBUIWidth">42</float>
 								<int key="IBUIStyle">1</int>
 								<reference key="IBUIToolbar" ref="3490839"/>
 							</object>
 							<object class="IBUIBarButtonItem" id="994666708">
 								<string key="IBUITitle">Edit</string>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<float key="IBUIWidth">85</float>
+								<float key="IBUIWidth">42</float>
 								<int key="IBUIStyle">1</int>
+								<reference key="IBUIToolbar" ref="3490839"/>
+							</object>
+							<object class="IBUIBarButtonItem" id="895881223">
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<float key="IBUIWidth">85</float>
+								<reference key="IBUICustomView" ref="1021949086"/>
 								<reference key="IBUIToolbar" ref="3490839"/>
 							</object>
 						</array>
@@ -127,6 +170,14 @@
 						<reference key="destination" ref="994666708"/>
 					</object>
 					<int key="connectionID">27</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pathModifyType</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="1021949086"/>
+					</object>
+					<int key="connectionID">34</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -200,6 +251,7 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="188240599"/>
 							<reference ref="994666708"/>
+							<reference ref="895881223"/>
 						</array>
 						<reference key="parent" ref="766721923"/>
 					</object>
@@ -213,6 +265,19 @@
 						<reference key="object" ref="994666708"/>
 						<reference key="parent" ref="3490839"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="895881223"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1021949086"/>
+						</array>
+						<reference key="parent" ref="3490839"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="1021949086"/>
+						<reference key="parent" ref="895881223"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -224,13 +289,15 @@
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">27</int>
+			<int key="maxID">34</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -253,12 +320,17 @@
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="editPathBtn">UIBarButtonItem</string>
+						<string key="pathModifyType">UISegmentedControl</string>
 						<string key="pathPicker">UITableView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="editPathBtn">
 							<string key="name">editPathBtn</string>
 							<string key="candidateClassName">UIBarButtonItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pathModifyType">
+							<string key="name">pathModifyType</string>
+							<string key="candidateClassName">UISegmentedControl</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="pathPicker">
 							<string key="name">pathPicker</string>
